--- a/about.html
+++ b/about.html
@@ -8,13 +8,8 @@ permalink: /about/
 
 
     <p class="about-text">
-        <span class="fa fa-city about-icon"></span>
-        I currently work at <a target="blank" href="https://research.google/teams/india-research-lab/">Google DeepMind</a> as a Researcher in the Advertising Sciences team, mentored by <a target="blank" href="https://research.google/people/107631/">Dr. Aravindan Raghuveer</a>, <a target="blank" href="https://sites.google.com/view/karthikeyan-shanmugam">Dr. Karthikeyan Shanmugam</a> and <a target="blank" href="https://research.google/people/107857/">Dr. Rishi Saket</a>. My work focuses on developing fair algorithms, especially under distribution shifts and developing scalable models for learning from aggregate data and privacy afforded by such aggregations. I aspire to build an impactful research career in <strong>Trustworthy ML</strong> focused on five foundational pillars: <strong>Privacy</strong>, <strong>Fairness</strong>, <strong>Interpretability</strong>, <strong>Robustness</strong>, <strong>Explainability</strong> for AI/ML Algorithms; for creating systems that are accountable, accessible, equitable and inclusive.
-    </p>
-
-    <p class="about-text">
         <span class="fa fa-graduation-cap about-icon"></span>
-        I've graduated from the amazing <a target="blank" href= "https://www.iith.ac.in/">IIT Hyderabad</a> with a Bachelor of Technology with Honors (Institute Rank 2 with CGPA 9.79/10.00) in 2022.
+        I've graduated from <a target="blank" href= "https://www.iith.ac.in/">IIT Hyderabad</a> with a Bachelor of Technology in 2024, setting up to join <a target="blank" href= "https://www.engineering.columbia.edu/">Columbia University</a> this Fall '24!
     </p>
 
     <p class="about-text">
