--- a/about.html
+++ b/about.html
@@ -14,7 +14,9 @@ permalink: /about/
 
     <p class="about-text">
         <span class="fa fa-briefcase about-icon"></span>
-        I have worked at <a target="blank" href= "https://www.adobe.com/">Adobe Big Data Experience Lab</a> mentored by <a target="blank" href= "https://research.adobe.com/person/anandhavelu-n/">Anandhavelu Natarajan</a> and <a target="blank" href= "https://www.linkedin.com/in/sharmila-reddy-nangi/">Sharmila Reddy Nangi</a> as a <strong>Research Intern</strong> for the summer of 2021, where I ideated and implemented novel techniques for improving <strong>tagging</strong> for <strong>accessibility</strong> using interactive <strong>human feedback</strong>. Earlier I worked as a <strong>Machine Learning Intern</strong> at <a target="blank" href= "https://www.jiw.co.jp/">Japan Infra Waymark Corp.</a> with <a target="blank" href= "https://ieeexplore.ieee.org/author/37087993184"> Arifumi Matsumoto</a> in the summer of 2020 where I researched, improved, and deployed SOTA <strong>semantic segmentation</strong> models for datasets derived from <strong>aerial imagery</strong>
+        During the first few years of my virtual undergrad (caused by the pandemic), I worked at <a target="blank" href= "https://www.anitechsolutions.com/">Anitech Solutions</a> mentored by <a target="blank" href= "https://www.linkedin.com/in/adnolan/?originalSubdomain=ie">CEO Andrew Nolan</a> where I worked with the Engineering team and Business Analysts to deliver and elaborate on functional and non functional requirements of software applications.
+        For the summer of 2023, I worked at <a target="blank" href= "https://www.oracle.com/">Oracle India</a> as an software intern, where I helped build on Redwood dependency analyzer for Redwood Infrastructure Components and Services (RADAR).
+    
     </p>
 
     <p class="about-text">
