--- a/about.html
+++ b/about.html
@@ -14,19 +14,13 @@ permalink: /about/
 
     <p class="about-text">
         <span class="fa fa-briefcase about-icon"></span>
-        During the first few years of my virtual undergrad (caused by the pandemic), I worked at <a target="blank" href= "https://www.anitechsolutions.com/">Anitech Solutions</a> mentored by <a target="blank" href= "https://www.linkedin.com/in/adnolan/?originalSubdomain=ie">CEO Andrew Nolan</a> where I worked with the Engineering team and Business Analysts to deliver and elaborate on functional and non functional requirements of software applications.
+        During the first few years of my virtual undergrad (caused by the pandemic), I worked at <a target="blank" href= "https://www.anitechsolutions.com/">Anitech Solutions</a> mentored by <a target="blank" href= "https://www.linkedin.com/in/adnolan/?originalSubdomain=ie">CEO Andrew Nolan</a> where I worked with the Engineering team and Business Analysts to deliver and elaborate on functional and non functional requirements of <strong>KnowCost for JIRA</strong>.
         For the summer of 2023, I worked at <a target="blank" href= "https://www.oracle.com/">Oracle India</a> as an software intern, where I helped build on Redwood dependency analyzer for Redwood Infrastructure Components and Services (RADAR).
-    
     </p>
 
     <p class="about-text">
         <span class="fa fa-school about-icon"></span>
-        I've also been a member of <a target="blank" href= "https://lab1055.github.io/">Machine Learning and Vision Lab Group @ IIT Hyderabad</a> headed by <a target="blank" href="https://www.iith.ac.in/~vineethnb/index.html">Dr. Vineeth N Balasubramanian.</a> I've worked on applications of Influence Functions and the extensions to interpretability and explainability of models. I explored the robustness domain, and read and presented work from various domains across the AI space, especially <strong>Computer Vision</strong>. I have dabbled in a multitude of Computer Science Research Areas and have had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/rogers/">Dr. Rogers Mathew</a> for my Honors Thesis on Studying and investigating special cases union‑closed families to obtain insight about the union‑closed conjecture and studying and obtaining bounds
-sizes of families possessing properties like L‑intersection closedness, with <a target="blank" href= "https://people.iith.ac.in/mvp/">Prof. M.V. Panduranga Rao</a> on experimenting with different allocation strategies to mitigate the effects of noise on the performance of a Quantum Algorithm, and with <a target="blank" href= "https://people.iith.ac.in/karteek/">Dr. Karteek Sreenivasaiah</a> studying and obtaining complexity bounds for algorithms obtaining Nash Equilibrium for games. I have also occasionally enagaged myself in <strong>Dev projects.</strong>, and had redesigned and developed the <a target="blank" href= "https://www.iith.ac.in/">official website of IIT Hyderabad</a> as a static site to improve speed, prevent malicious attacks. </p>
-
-    <p class="about-text">
-        <span class="fa fa-book about-icon"></span>        
-        Most of my free time is spent reading books from around the world! Feel free to explore my readings tab and hit me up!
+        During my undergrad, I've worked with <a target="blank" href= "https://borthakurayon.github.io/">Dr. Ayon Borthkaur</a> to create an algorithm which trains neural networks without the need for backpropagation. I extensively studied <strong>local learning, few shot learning, and few epoch learning</strong>, incporporating our algorithm with these features.
     </p>
 
     <p class="about-text">
