--- a/about.html
+++ b/about.html
@@ -27,27 +27,12 @@ permalink: /about/
 
     <p class="about-text">
         <span class="fa fa-heart about-icon"></span>
-        When I'm not reading, I'm
-        <ul>
-            <li>watching/playing Tennis and Football and Cricket matches, and newly F1, and newly newly Ice Hockey (Go Canucks Go!), analysis and everything else that surrounds these beautiful sports. If you are a Djokovic or a Chelsea fan, how do I not know you already!</li>
-            <li>quizzing and conducting quizzes, debating, and binging random shows</li>
-            <li>exploring new places, new activities, and learning random facts about randomest things under and beyond the sun </li>
-         </ul>
-    </p>
-
-    <p class="about-text">
-        <span class="fa fa-hands-helping"></span>
-        I love giving back to the society in whatever way I can, be it through tutoring underprivileged children or developing reading material for the disadvantaged. Multiple Teaching Assistantships at Google Research, NPTEL and IIT Hyderabad have helped me gain invaluable experience, learning the subjects itself better and learning how to help people learn. No doubt, the best way to learn is to teach. I also believe it is important to be a contributor to the Research Community and have reviewed and volunteered for several conferences like NeurIPS '23, COLT '23, ICML '24.
-    </p>
-    
-    <p class="about-text">
-        <span class="fa fa-users about-icon"></span>
-        I've represented IIT Hyderabad at <strong>Nihilanth</strong>, the Inter-IIT-IIM Quiz Championship, held at IIM Calcutta in January 2019, and at <strong>The Inter IIT Cultural Meet</strong> held at IIT Bombay in Decmber 2019, and at <strong>The Inter IIT Tech Meet</strong> held by IIT Guwahati in March 2021. Those were couple of most exciting weekends of my life, a congregation of some of the most interesting bunch of amazing people.
+        My free time is usually consumed by badminton, football, jogging, and chess. If not these, you can always find me binging TV shows or drowning myself with novels about crime, fiction and fantasy.
     </p>
 
     <p class="about-text">
         <span class="fa fa-envelope about-icon"></span>
         Feel free to connect through any of the social media links given below! 
-        </p>
+    </p>
 
 </div>
