--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 ---
-layout: post
-title: About Me!
+layout: page
+title: About Me
 permalink: /about/
 ---
 
 <div id="aboutme-section">
-
 
     <p class="about-text">
         <span class="fa fa-graduation-cap about-icon"></span>
@@ -13,7 +12,7 @@ permalink: /about/
     </p>
 
     <p class="about-text">
-        <span class="fa fa-school about-icon"></span>
+        <span class="fa fa-school about-icon">abcd</span>
         During my undergrad, I've worked with <a target="blank" href= "https://borthakurayon.github.io/">Dr. Ayon Borthkaur</a> to create an algorithm which trains neural networks without the need for backpropagation. I extensively studied <strong>local learning, few shot learning, and few epoch learning</strong>, incorporating the algorithm with all these features.
         I've had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/sumohana/">Prof. Sumohana Channappayya</a> on digital video compression. I came up with a novel transform inspired by field dynamics which shows improved performance over the traditional DCT, especially in texture rich regions.
         Since then I've explored tons of graph compression algorithms with <a target="blank" href= "https://people.iith.ac.in/shashankvatedka/html/home.html">Dr. Shashank Vatedka</a> and more recently, worked on very high dimensional data compression, aiming to reduce transmission to less than 1 bit per dimension.
