--- a/about.html
+++ b/about.html
@@ -12,16 +12,20 @@ permalink: /about/
     </p>
 
     <p class="about-text">
-        <span class="fa fa-school about-icon">abcd</span>
-        During my undergrad, I've worked with <a target="blank" href= "https://borthakurayon.github.io/">Dr. Ayon Borthkaur</a> to create an algorithm which trains neural networks without the need for backpropagation. I extensively studied <strong>local learning, few shot learning, and few epoch learning</strong>, incorporating the algorithm with all these features.
-        I've had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/sumohana/">Prof. Sumohana Channappayya</a> on digital video compression. I came up with a novel transform inspired by field dynamics which shows improved performance over the traditional DCT, especially in texture rich regions.
-        Since then I've explored tons of graph compression algorithms with <a target="blank" href= "https://people.iith.ac.in/shashankvatedka/html/home.html">Dr. Shashank Vatedka</a> and more recently, worked on very high dimensional data compression, aiming to reduce transmission to less than 1 bit per dimension.
+        <span class="fa fa-school about-icon"> My research during Undergrad</span>
+        <ol>
+            <li>During my undergrad, I've worked with <a target="blank" href= "https://borthakurayon.github.io/">Dr. Ayon Borthkaur</a> to create an algorithm which trains neural networks without the need for backpropagation. I extensively studied <strong>local learning, few shot learning, and few epoch learning</strong>, incorporating the algorithm with all these features.</li>
+            <li>I've had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/sumohana/">Prof. Sumohana Channappayya</a> on digital video compression. I came up with a novel transform inspired by field dynamics which shows improved performance over the traditional DCT, especially in texture rich regions.</li>
+            <li>Since then I've explored tons of graph compression algorithms with <a target="blank" href= "https://people.iith.ac.in/shashankvatedka/html/home.html">Dr. Shashank Vatedka</a> and more recently, worked on very high dimensional data compression, aiming to reduce transmission to less than 1 bit per dimension.</li>
+        </ol>
     </p>
     
     <p class="about-text">
-        <span class="fa fa-briefcase about-icon"></span>
-        During the first few years of my virtual undergrad (caused by the pandemic), I worked at <a target="blank" href= "https://www.anitechsolutions.com/">Anitech Solutions</a> mentored by <a target="blank" href= "https://www.linkedin.com/in/adnolan/?originalSubdomain=ie">CEO Andrew Nolan</a> where I worked with the Engineering team and Business Analysts to deliver and elaborate on functional and non functional requirements of <strong>KnowCost for JIRA</strong>.
-        For the summer of 2023, I worked at <a target="blank" href= "https://www.oracle.com/">Oracle India</a> as an software intern, where I helped build on Redwood dependency analyzer for Redwood Infrastructure Components and Services (RADAR).
+        <span class="fa fa-briefcase about-icon"> Work Experience</span>
+        <ol>
+            <li>During the first few years of my virtual undergrad (caused by the pandemic), I worked at <a target="blank" href= "https://www.anitechsolutions.com/">Anitech Solutions</a> mentored by <a target="blank" href= "https://www.linkedin.com/in/adnolan/?originalSubdomain=ie">CEO Andrew Nolan</a> where I worked with the Engineering team and Business Analysts to deliver and elaborate on functional and non functional requirements of <strong>KnowCost for JIRA</strong>.</li>
+            <li>For the summer of 2023, I worked at <a target="blank" href= "https://www.oracle.com/">Oracle India</a> as an software intern, where I helped build on Redwood dependency analyzer for Redwood Infrastructure Components and Services (RADAR).</li>
+        </ol>
     </p>
 
     <p class="about-text">
