--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ permalink: /about/
 
     <p class="about-text">
 <!--         <span class="fa fa-school about-icon"></span> -->
-        My Research
+        <span class="fa fa-school about-icon"><font size="6">My Research</font></span>
         <ol>
             <li>During my undergrad, I've worked with <a target="blank" href= "https://borthakurayon.github.io/">Dr. Ayon Borthkaur</a> to create an algorithm which trains neural networks without the need for backpropagation. I extensively studied <strong>local learning, few shot learning, and few epoch learning</strong>, incorporating the algorithm with all these features.</li>
             <li>I've had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/sumohana/">Prof. Sumohana Channappayya</a> on digital video compression. I came up with a novel transform inspired by field dynamics which shows improved performance over the traditional DCT, especially in texture rich regions.</li>
