--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@ permalink: /about/
     </p>
 
     <p class="about-text">
-        <span class="fa fa-university about-icon"></span> <font size="5">My Research</font>
+<!--         <span class="fa fa-university about-icon"></span> -->
+        <i class="fa fa-university" aria-hidden="true"></i><font size="5">My Research</font>
         <ol>
             <li>During my undergrad, I've worked with <a target="blank" href= "https://borthakurayon.github.io/">Dr. Ayon Borthkaur</a> to create an algorithm which trains neural networks without the need for backpropagation. I extensively studied <strong>local learning, few shot learning, and few epoch learning</strong>, incorporating the algorithm with all these features.</li>
             <li>I've had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/sumohana/">Prof. Sumohana Channappayya</a> on digital video compression. I came up with a novel transform inspired by field dynamics which shows improved performance over the traditional DCT, especially in texture rich regions.</li>
