--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ permalink: /about/
     </p>
 
     <p class="about-text">
-        <span class="fa fa-university about-icon"></span> <font size="5">My Research</font>
+        <span class="fa fa-university about-icon"></span> <font size="4">My Research</font>
         <ol>
             <li>During my undergrad, I've worked with <a target="blank" href= "https://borthakurayon.github.io/">Dr. Ayon Borthkaur</a> to create an algorithm which trains neural networks without the need for backpropagation. I extensively studied <strong>local learning, few shot learning, and few epoch learning</strong>, incorporating the algorithm with all these features.</li>
             <li>I've had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/sumohana/">Prof. Sumohana Channappayya</a> on digital video compression. I came up with a novel transform inspired by field dynamics which shows improved performance over the traditional DCT, especially in texture rich regions.</li>
@@ -24,7 +24,7 @@ permalink: /about/
     </p>
     
     <p class="about-text">
-        <span class="fa fa-briefcase about-icon"></span> <font size="5">Work Experience</font>
+        <span class="fa fa-briefcase about-icon"></span> <font size="4">Work Experience</font>
         <ol>
             <li>During the first few years of my virtual undergrad (caused by the pandemic), I worked at <a target="blank" href= "https://www.anitechsolutions.com/">Anitech Solutions</a> mentored by <a target="blank" href= "https://www.linkedin.com/in/adnolan/?originalSubdomain=ie">CEO Andrew Nolan</a> where I worked with the Engineering team and Business Analysts to deliver and elaborate on functional and non functional requirements of <strong>KnowCost for JIRA</strong>.</li>
             <li>For the summer of 2023, I worked at <a target="blank" href= "https://www.oracle.com/">Oracle India</a> as an software intern, where I helped build on Redwood dependency analyzer for Redwood Infrastructure Components and Services (RADAR).</li>
@@ -33,7 +33,11 @@ permalink: /about/
 
     <p class="about-text">
         <span class="fa fa-heart about-icon"></span>
-        My free time is usually consumed by badminton, football, jogging, and chess. If not these, you can always find me binging TV shows or drowning myself with novels about crime, fiction and fantasy. Feel free to connect through any of the social media links given below! 
+        My free time is usually consumed by badminton, football, jogging, and chess. If not these, you can always find me binging TV shows or drowning myself with novels about crime, fiction and fantasy.
     </p>
 
+    <p class="about-text">
+        <span class="fa fa-envelope about-icon"></span>
+         Feel free to connect through any of the social media links given below!
+    </p>
 </div>
