--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Aditya Somasundaram
 subtitle: Student | IIT Hyderabad | aditsom7[at]gmail[dot]com | Local learning, few shot learning, few epoch learning, continual learning
 use-site-title: true
-cover-img: /assets/img/dp_landscape.jpeg
+cover-img: /assets/img/dp_landscape.heic
 css: /assets/css/demo.css
 ---
 
