--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Aditya Somasundaram
-subtitle: Student | IIT Hyderabad | aditsom7[at]gmail[dot]com | Local learning, few shot learning, few epoch learning, continual learning
+subtitle: Student | Columbia University | aditsom7[at]gmail[dot]com
 use-site-title: true
 cover-img: /assets/img/dp_landscape.heic
 css: /assets/css/demo.css
