--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Aditya Somasundaram
 subtitle: Student | Columbia University | aditsom7[at]gmail[dot]com
 use-site-title: true
-cover-img: /assets/img/dp_landscape.heic
+cover-img: /assets/img/dp_landscape.png
 css: /assets/css/demo.css
 ---
 
