--- a/index.html
+++ b/index.html
@@ -14,4 +14,10 @@ css: /assets/css/demo.css
          </p>
 </div>
 
+<div style="position: relative;background-color: blue; width: 600px; height: 800px;">    
+
+    <div style="position: absolute; bottom: 5px; background-color: green">
+    Reach out to me at aditsom7[at]gmail[dot]com
+    </div>
+</div>
 <!-- <a><img class="center" src="assets\img\dp.jpeg" height="auto" width="400" style="border-radius:50%"></a> -->
