--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Aditya Somasundaram
-subtitle: Student | Columbia University | aditsom7[at]gmail[dot]com
+subtitle: Student | Columbia University
 use-site-title: true
 cover-img: /assets/img/dp_landscape_3.png
 css: /assets/css/demo.css
@@ -11,6 +11,12 @@ css: /assets/css/demo.css
          <p class="about-text">
                   Hi guys! I've just finished my undergrad and getting set to join Columbia University this Fall '24! New York, here I come.
                   Going to spend the rest of summer in India researching few shot few epoch learning and perfecting the art of cooking meals for myself.
+         </p>
+</div>
+
+<div id="email">
+         <p style="position: absolute; bottom: 0; text-align: center;">
+                  Feel free to reach out to me at aditsom7[at]gmail[dot]com
          </p>
 </div>
 
