--- a/rant.html
+++ b/rant.html
@@ -1,1 +1,16 @@
+---
+layout: page
+title:
+permalink: /rant/
+---
 
+<center>
+  <font size="8">My thoughts on what I'm currently working on</font>
+</center>
+
+<div id="rants">
+  <p class="1">
+    Right off the bat, I hate the fact that continual learning involves constant change of the underlying distributions of data. It's as if the problem requires capturing of a time varying data distribution but without having no clue as to what is yet to come.
+    Makes it very hard to accomodate for in an elegant fashion. If I was making the human brain, I would resort to something like a "recall" function to remember what was learnt and get used to it before learning a new task.
+  </p>
+</div>
