--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ permalink: /about/
     
     <p class="about-text">
         <span class="fa fa-graduation-cap about-icon"></span>
-        I've graduated from <a target="blank" href= "https://www.iith.ac.in/">IIT Hyderabad</a> with a Bachelor of Technology in 2024, setting up to join <a target="blank" href= "https://www.engineering.columbia.edu/">Columbia University</a> this Fall '24!
+        I've graduated from <a target="blank" href= "https://www.iith.ac.in/">IIT Hyderabad</a> with a Bachelor of Technology in 2024 and am setting up to join <a target="blank" href= "https://www.engineering.columbia.edu/">Columbia University</a> this Fall '24!
     </p>
 
     <p class="about-text">
