--- a/rant.html
+++ b/rant.html
@@ -10,6 +10,7 @@ permalink: /rant/
 
 <div id="rants">
   <p class="1">
+    <font size="6">Continual Learning</font>
     Right off the bat, I hate the fact that continual learning involves constant change of the underlying distributions of data. It's as if the problem requires capturing of a time varying data distribution but without having no clue as to what is yet to come.
     Makes it very hard to accommodate for in an elegant fashion. If I was making the human brain, I would resort to something like a "recall" function to remember what was learnt and get used to it before learning a new task.
   </p>
