--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@ cover-img: /assets/img/dp_landscape_3.png
 css: /assets/css/demo.css
 ---
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L0E45BRZPT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L0E45BRZPT');
+</script>
+
 <div id="aboutme-section">
          <p class="about-text">
                   Hi guys! I've just finished my undergrad and getting set to join Columbia University this Fall '24! New York, here I come.
