--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@ permalink: /about/
         <span class="fa fa-university about-icon"></span> <font size="4">My Research</font>
         <ol>
             <li>During my undergrad, I worked with <a target="blank" href= "https://borthakurayon.github.io/">Dr. Ayon Borthkaur</a> to create an algorithm which trains neural networks without the need for backpropagation. I extensively studied <strong>local learning, few shot learning, and few epoch learning</strong>, incorporating the algorithm with all these features.</li>
-            <li>I've had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/sumohana/">Prof. Sumohana Channappayya</a> on digital video compression. I came up with a novel transform inspired by field dynamics which shows improved performance over the traditional DCT, especially in texture rich regions.</li>
-            <li>Since then I've explored tons of graph compression algorithms with <a target="blank" href= "https://people.iith.ac.in/shashankvatedka/html/home.html">Dr. Shashank Vatedka</a> and more recently, worked on very high dimensional data compression, aiming to reduce transmission to less than 1 bit per dimension.</li>
+            <li>I've had the pleasure to work with <a target="blank" href= "https://people.iith.ac.in/sumohana/">Prof. Sumohana Channappayya</a> on digital video compression. I came up with a novel <strong>transform inspired by field dynamics</strong> which shows improved performance over the traditional DCT, especially in texture rich regions.</li>
+            <li>Since then I've explored tons of graph compression algorithms with <a target="blank" href= "https://people.iith.ac.in/shashankvatedka/html/home.html">Dr. Shashank Vatedka</a> and more recently, worked on very <strong>high dimensional data compression</strong>, aiming to reduce transmission to less than 1 bit per dimension.</li>
         </ol>
     </p>
     
