--- a/rant.html
+++ b/rant.html
@@ -17,5 +17,13 @@ permalink: /rant/
   
   <p class="2">
     More thoughts on the way!
-   </p>
+  </p>
+
+  <p>
+    Papers I'm reading currently:
+    <ol>
+      <li>[A Comprehensive Survey of Continual Learning: Theory, Method and Application](https://arxiv.org/pdf/2302.00487)</li>
+      <li>[A Theory of Human-Like Few-Shot Learning](https://arxiv.org/pdf/2301.01047)</li>
+    </ol>
+  </p>
 </div>
