--- a/rant.html
+++ b/rant.html
@@ -22,8 +22,8 @@ permalink: /rant/
   <p>
     Papers I'm reading currently:
     <ol>
-      <li>[A Comprehensive Survey of Continual Learning: Theory, Method and Application](https://arxiv.org/pdf/2302.00487)</li>
-      <li>[A Theory of Human-Like Few-Shot Learning](https://arxiv.org/pdf/2301.01047)</li>
+      <li><a target="blank" href= "https://arxiv.org/pdf/2302.00487">A Comprehensive Survey of Continual Learning: Theory, Method and Application</a></li>
+      <li><a target="blank" href= "https://arxiv.org/pdf/2301.01047">A Theory of Human-Like Few-Shot Learning</a></li>
     </ol>
   </p>
 </div>
