--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ css: /assets/css/demo.css
 
 <div id="aboutme-section">
          <p class="about-text">
-                  Hi guys! I've just finished my undergrad and getting set to join Columbia University this Fall '24! New York, here I come.
+                  Hi guys! I've just finished my undergrad at IIT Hyderabad and now getting set to join Columbia University this Fall '24! New York, here I come.
                   Going to spend the rest of summer in India researching few shot few epoch learning and perfecting the art of cooking meals for myself.
          </p>
 </div>
