--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@ permalink: /about/
     <p class="about-text">
         <span class="fa fa-heart about-icon"></span>
         My free time is usually consumed by badminton, football, jogging, and chess. If not these, you can always find me binging TV shows or drowning myself with novels about crime, fiction and fantasy.
+        Recently, I'm completely taken by Catan!
     </p>
 
     <p class="about-text">
