--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
 title: Aditya Somasundaram
-subtitle: Student | Columbia University
+subtitle: Graduate Student | Columbia University
+Undergraduate | IIT Hyderabad
 use-site-title: true
 cover-img: /assets/img/dp_landscape_3.png
 css: /assets/css/demo.css
