--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Aditya Somasundaram
 subtitle: Graduate Student | Columbia University
-Undergraduate | IIT Hyderabad
+<!-- Undergraduate | IIT Hyderabad -->
 use-site-title: true
 cover-img: /assets/img/dp_landscape_3.png
 css: /assets/css/demo.css
