--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ css: /assets/css/demo.css
 
 <div id="aboutme-section">
          <p class="about-text">
-                  Hi guys! I've just finished my undergrad at IIT Hyderabad and now getting set to join Columbia University this Fall '24! New York, here I come.
-                  Going to spend the rest of summer in India researching few shot few epoch learning and perfecting the art of cooking meals for myself.
+                  I'm finally settling in New York! Starting my Masters of Science program at Columbia Engineering this September.
+                  Manhattan has been lovely so far, so much to explore and so much to do!
          </p>
 </div>
 
