--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ css: /assets/css/demo.css
                   I'm finally settling in New York! Starting my Masters of Science program at Columbia Engineering this September.
                   Manhattan has been lovely so far, so much to explore and so much to do!
          </p>
+
+         <p class="about-text">
+                  I'm actively searching for ML research internships at labs and the industry for the summer of '25!
+                  Please reach out if you believe I could learn and help out at your lab!
+         </p>
 </div>
 
 <!-- <div id="aboutme-section">
