--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ css: /assets/css/demo.css
          </p>
 </div>
 
-<div id="aboutme-section">
+<!-- <div id="aboutme-section">
          <p class="about-text">
                   Feel free to reach out to me at aditsom7[at]gmail[dot]com or use the social media links below!
          </p>
-</div>
+</div> -->
 
 <!-- <a><img class="center" src="assets\img\dp.jpeg" height="auto" width="400" style="border-radius:50%"></a> -->
