--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ css: /assets/css/demo.css
 
          <p class="about-text">
                   I'm actively searching for ML research internships at labs and the industry for the summer of '25!
-                  Please reach out if you believe I could learn and help out at your lab!
+                  Please reach out to me! I'm sure I could learn and help out!
          </p>
 </div>
 
