--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ css: /assets/css/demo.css
                   Manhattan has been lovely so far, so much to explore and so much to do!
          </p>
 
+        <p class="about-text">
+                  &#127881; I won the best poster award at the <a targer="blank" href="https://events.nyas.org/event/23384180-ad97-4cad-baee-adae8e260c89/summary"> 15<SUP>th</SUP> Annual Machine Learning Symposium </a> for my work on <a targer="blank" href="https://arxiv.org/abs/2402.09769"> learning without backpropagation </a>!
+                  
+        </p>
+
          <p class="about-text">
                   I'm actively searching for ML research internships at labs and the industry for the summer of '25!
                   Please reach out to me! I'm sure I could learn and help out!
