--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ css: /assets/css/demo.css
 <div id="aboutme-section">
          <p class="about-text">
                   I'm finally settling in New York! Starting my Masters of Science program at Columbia Engineering this September.
-                  Manhattan has been lovely so far, so much to explore and so much to do!
+                  Manhattan has been lovely so far, so much to explore and so much to do! PS. Jesus Christ, its cold. I feel like I'm being permanently pasteurized.
          </p>
 
         <p class="about-text">
@@ -28,16 +28,14 @@ css: /assets/css/demo.css
                   Do check out my <a targer="blank" href="https://drive.google.com/file/d/1MGvw7TpTwyrQAKBt2wryS2ekToxdcQx5/view?usp=sharing"> poster </a> and let me know what you think about my work!
         </p>
 
+        <p class="about-text">
+                  &#127881; I am researching LLM optimization with <a targer="blank" href="https://goldblum.github.io/">Prof. Micah Goldblum</a> and the <a targer="blank" href="https://cims.nyu.edu/~andrewgw/">Wilson Lab at NYU Courant</a>!
+        </p>
+
          <p class="about-text">
                   I'm actively searching for ML research internships at labs and the industry for the summer of '25!
-                  Please reach out to me! I'm sure I could learn and help out!
-         </p>
-</div>
-
-<!-- <div id="aboutme-section">
-         <p class="about-text">
                   Feel free to reach out to me at aditsom7[at]gmail[dot]com or use the social media links below!
          </p>
-</div> -->
 
-<!-- <a><img class="center" src="assets\img\dp.jpeg" height="auto" width="400" style="border-radius:50%"></a> -->
+  
+
