--- a/chess.html
+++ b/chess.html
@@ -8,6 +8,7 @@ permalink: /chess/
     <center>
         <font size="7">My chess and learnings!</font>
     </center>
-    
+
+    <img src="assets/img/chess/game 1.gif" alt="An easy attack" style="width: 300px; height: auto;">
     
 </div>
