--- a/chess.html
+++ b/chess.html
@@ -9,6 +9,6 @@ permalink: /chess/
         <font size="7">My chess and learnings!</font>
     </center>
 
-    <img src="https://github.com/AditSom/AdityaSomasundaram/blob/main/assets/img/chess/game%201.gif" alt="An easy attack" style="width: 300px; height: auto;">
+    <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%201.gif" alt="An easy attack" style="width: 300px; height: auto;">
     
 </div>
