--- a/chess.html
+++ b/chess.html
@@ -4,11 +4,23 @@ title:
 permalink: /chess/
 ---
 
+<style>
+    .flex-container {
+      display: flex;
+      justify-content: center; /* Centers horizontally */
+      height: 100vh; /* Full viewport height for vertical centering */
+    }
+    img {
+      width: 300px; /* Optional: Adjust image size */
+    }
+  </style>
+
 <div id="aboutme-section">
     <center>
         <font size="7">My chess and learnings!</font>
     </center>
 
-    <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%201.gif" alt="An easy attack" style="width: 300px; height: auto;">
-    
+    <div class="flex-container">
+        <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%201.gif" alt="An easy attack">
+    </div>
 </div>
