--- a/chess.html
+++ b/chess.html
@@ -4,23 +4,16 @@ title:
 permalink: /chess/
 ---
 
-<style>
-    .flex-container {
-      display: flex;
-      justify-content: center; /* Centers horizontally */
-      height: 100vh; /* Full viewport height for vertical centering */
-    }
-    img {
-      width: 300px; /* Optional: Adjust image size */
-    }
-  </style>
-
 <div id="aboutme-section">
     <center>
         <font size="7">My chess and learnings!</font>
     </center>
 
-    <div class="flex-container">
+
+    <figure style="text-align: center; margin: 20px auto;">
         <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%201.gif" alt="An easy attack">
-    </div>
+        <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
+          This is the caption for the image
+        </figcaption>
+  </figure>
 </div>
