--- a/chess.html
+++ b/chess.html
@@ -10,7 +10,7 @@ permalink: /chess/
     </center>
 
 
-    <figure style="width: 4in; height: 4in; display: flex; flex-direction: column; align-items: center; justify-content: center; border: 1px solid #ccc; margin: 20px auto;">
+    <figure style="width: 4in; height: 4in; display: flex; flex-direction: column; align-items: center; justify-content: center; margin: 20px auto;">
         <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%201.gif" alt="An easy attack" style="max-width: 100%; max-height: 75%; display: block;">
         <figcaption style="font-size: 16px; color: #555; margin-top: 8px; text-align: center;">
           Although my usual game is grind out and play closed until my opponent slips up, I really did enjoy taking this attack on. To be fair I am playing 500 elo below my peak so...
