--- a/chess.html
+++ b/chess.html
@@ -16,6 +16,10 @@ permalink: /chess/
                 alt="An easy attack"
                 title="Unusual for my style of play" 
                 style="max-width: 100%; max-height: 75%; display: block;">
+
+            <div style="position: absolute; top: 0; left: 0; width: 100%; background-color: rgba(0, 0, 0, 0.5); color: black; text-align: center; padding: 10px; font-size: 16px;">
+                Unusual for my style of play
+            </div>
             
             <figcaption style="font-size: 16px; color: #555; margin-top: 8px; text-align: center;">
               Although my usual game is grind out and play closed until my opponent slips up, I really did enjoy taking this attack on. To be fair I am playing 500 elo below my peak so...
@@ -28,6 +32,10 @@ permalink: /chess/
                 alt="An easier attack"
                 title="2.e5 with a beautiful attack!" 
                 style="max-width: 100%; max-height: 75%; display: block;">
+
+            <div style="position: absolute; top: 0; left: 0; width: 100%; background-color: rgba(0, 0, 0, 0.5); color: black; text-align: center; padding: 10px; font-size: 16px;">
+                2.e5 with a beautiful attack!
+            </div> 
             
             <figcaption style="font-size: 16px; color: #555; margin-top: 8px; text-align: center;">
               Similar to the previous game, I ended up opening the position and attacking. Not sure what the thought process was behind hanging the rook on a8?? Although I missed the Nxb5 idea, cramming his pieces together and mating the black king was very satisfying. I think I'll study 2.e5 more!
