--- a/chess.html
+++ b/chess.html
@@ -18,7 +18,7 @@ permalink: /chess/
             title="Unusual for my style of play" 
             style="max-width: 100%; max-height: 75%; display: block;">
 
-        <div style="position: absolute; top: 0; left: 0; width: 100%; background-color: rgba(0, 0, 0, 0.5); color: black; text-align: center; padding: 10px; font-size: 16px;">
+        <div style="width: 50%; color: black; text-align: left; padding: 10px; font-size: 16px;">
             Unusual for my style of play
         </div>
         
@@ -34,7 +34,7 @@ permalink: /chess/
             title="2.e5 with a beautiful attack!" 
             style="max-width: 100%; max-height: 75%; display: block;">
 
-        <div style="position: absolute; top: 0; left: 0; width: 100%; background-color: rgba(0, 0, 0, 0.5); color: black; text-align: center; padding: 10px; font-size: 16px;">
+        <div style="width: 50%; color: black; text-align: right; padding: 10px; font-size: 16px;">
             2.e5 with a beautiful attack!
         </div> 
         
