--- a/chess.html
+++ b/chess.html
@@ -10,7 +10,7 @@ permalink: /chess/
     </center>
 </div>
 
-<div style="display: flex; justify-content: center; gap: 20px; margin: 20px auto;">
+<!-- <div style="display: flex; justify-content: center; gap: 20px; margin: 20px auto;">
     
     <figure style="width: 4in; height: 4in; display: flex; flex-direction: column; align-items: center; justify-content: center; margin: 20px auto;">
         <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%201.gif"
@@ -43,4 +43,30 @@ permalink: /chess/
         </figcaption>
   
     </figure>
+</div> -->
+
+<div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 20px;">
+  <figure style="width: 4in; display: flex; flex-direction: column; align-items: center; text-align: center;">
+    <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
+      Unusual for my style of play
+    </div>
+    <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%201.gif"
+         alt="An easy attack"
+         style="max-width: 100%; height: auto; display: block;">
+    <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
+      Although my usual game is grind out and play closed until my opponent slips up, I really did enjoy taking this attack on. To be fair I am playing 500 elo below my peak so...
+    </figcaption>
+  </figure>
+
+  <figure style="width: 4in; display: flex; flex-direction: column; align-items: center; text-align: center;">
+    <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
+      2.e5 with a beautiful attack!
+    </div>
+    <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%202.gif"
+         alt="An easier attack"
+         style="max-width: 100%; height: auto; display: block;">
+    <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
+      Similar to the previous game, I ended up opening the position and attacking. Not sure what the thought process was behind hanging the rook on a8?? Although I missed the Nxb5 idea, cramming his pieces together and mating the black king was very satisfying. I think I'll study 2.e5 more!
+    </figcaption>
+  </figure>
 </div>
