--- a/chess.html
+++ b/chess.html
@@ -9,9 +9,9 @@ permalink: /chess/
         <font size="7">My chess and learnings!</font>
     </center>
 </div>
-<!-- 
-<div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 20px;">
-  <figure style="width: 4in; display: flex; flex-direction: column; align-items: center; text-align: center;">
+
+<div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
+  <figure style="width: 4in; text-align: center;">
     <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
       Unusual for my style of play
     </div>
@@ -23,7 +23,7 @@ permalink: /chess/
     </figcaption>
   </figure>
 
-  <figure style="width: 4in; display: flex; flex-direction: column; align-items: center; text-align: center;">
+  <figure style="width: 4in; text-align: center;">
     <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
       2.e5 with a beautiful attack!
     </div>
@@ -34,7 +34,7 @@ permalink: /chess/
       Similar to the previous game, I ended up opening the position and attacking. Not sure what the thought process was behind hanging the rook on a8?? Although I missed the Nxb5 idea, cramming his pieces together and mating the black king was very satisfying. I think I'll study 2.e5 more!
     </figcaption>
   </figure>
-</div> -->
+</div>
 
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
   <figure style="width: 4in; text-align: center;">
