--- a/chess.html
+++ b/chess.html
@@ -36,3 +36,9 @@ permalink: /chess/
   </figure>
 </div>
 
+
+<div class="section-container" id="sectionContainer">
+    <!-- Dynamic GIF sections will appear here -->
+  </div>
+<script src="scripts.js"></script>
+
