--- a/chess.html
+++ b/chess.html
@@ -10,7 +10,7 @@ permalink: /chess/
     </center>
 </div>
 
-<div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
+<!-- <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
   <figure style="width: 4in; text-align: center;">
     <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
       Unusual for my style of play
@@ -34,11 +34,11 @@ permalink: /chess/
       Similar to the previous game, I ended up opening the position and attacking. Not sure what the thought process was behind hanging the rook on a8?? Although I missed the Nxb5 idea, cramming his pieces together and mating the black king was very satisfying. I think I'll study 2.e5 more!
     </figcaption>
   </figure>
-</div>
+</div> -->
 
 
 <div class="section-container" id="sectionContainer">
     <!-- Dynamic GIF sections will appear here -->
   </div>
-<script src="scripts.js"></script>
+<script src="script.js"></script>
 
