--- a/chess.html
+++ b/chess.html
@@ -41,4 +41,28 @@ permalink: /chess/
 
 
 <!-- Games 3 and 4 -->
+<div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
+  <figure style="width: 4in; text-align: center;">
+    <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
+      Almost got caught up in some frenzy
+    </div>
+    <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%203.gif"
+         alt="Close save"
+         style="max-width: 100%; height: auto; display: block;">
+    <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
+        This was a close save. The knight and queen combo did pull me back from the brink. Not sure why my brain decided to backfire on me, but glad my opponent's brain decided to do the same as well.
+    </figcaption>
+  </figure>
 
+  <figure style="width: 4in; text-align: center;">
+    <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
+      Averback, you beauty!
+    </div>
+    <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%204.gif"
+         alt="An easier attack"
+         style="max-width: 100%; height: auto; display: block;">
+    <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
+        I cannot tell you how long I've waited for some nerd who just mugs stuff up to play the open sicilian against my averback dragon. My heart rate kept increasing until I saw Bh6 on the board! AAAAA!
+    </figcaption>
+  </figure>
+</div>
