--- a/chess.html
+++ b/chess.html
@@ -66,3 +66,30 @@ permalink: /chess/
     </figcaption>
   </figure>
 </div>
+
+<!-- Games 5 and 6 -->
+<div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
+  <figure style="width: 4in; text-align: center;">
+    <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
+      Almost got caught up in some frenzy
+    </div>
+    <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%205.gif"
+         alt="Close save"
+         style="max-width: 100%; height: auto; display: block;">
+    <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
+        This was a close save. The knight and queen combo did pull me back from the brink. Not sure why my brain decided to backfire on me, but glad my opponent's brain decided to do the same as well.
+    </figcaption>
+  </figure>
+
+  <figure style="width: 4in; text-align: center;">
+    <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
+      How to crush the dragon?
+    </div>
+    <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%209.gif"
+         alt="An easier attack"
+         style="max-width: 100%; height: auto; display: block;">
+    <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
+        Was Fischer wrong about the dragon? Atleast he wasn't in this game. Listening to his advice of pushing the h and g pawns brought me a very easy win!
+    </figcaption>
+  </figure>
+</div>
