--- a/chess.html
+++ b/chess.html
@@ -83,13 +83,13 @@ permalink: /chess/
 
   <figure style="width: 4in; text-align: center;">
     <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
-      How to crush the dragon?
+      How to crush the sicilian defense?
     </div>
     <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%209.gif"
-         alt="An easier attack"
+         alt="Push the h and g pawns"
          style="max-width: 100%; height: auto; display: block;">
     <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
-        Was Fischer wrong about the dragon? Atleast he wasn't in this game. Listening to his advice of pushing the h and g pawns brought me a very easy win!
+        Was Fischer wrong about the dragon? Although this wasn't the dragon, listening to his advice of pushing the h and g pawns brought me a very easy win!
     </figcaption>
   </figure>
 </div>
