--- a/chess.html
+++ b/chess.html
@@ -71,13 +71,13 @@ permalink: /chess/
 <div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
   <figure style="width: 4in; text-align: center;">
     <div style="font-size: 16px; font-weight: bold; color: black; margin-bottom: 10px;">
-      Almost got caught up in some frenzy
+      Double killer knights
     </div>
     <img src="https://raw.githubusercontent.com/AditSom/AdityaSomasundaram/main/assets/img/chess/game%205.gif"
-         alt="Close save"
+         alt="Night Night Knight Knight"
          style="max-width: 100%; height: auto; display: block;">
     <figcaption style="font-size: 16px; color: #555; margin-top: 8px;">
-        This was a close save. The knight and queen combo did pull me back from the brink. Not sure why my brain decided to backfire on me, but glad my opponent's brain decided to do the same as well.
+        Chopping my opponent's king side with both my knights was satisfying. One of the few very nice middle game checkmates I've performed over the board! 
     </figcaption>
   </figure>
 
