--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@ css: /assets/css/demo.css
 </script>
 
 <div id="aboutme-section">
-         <p class="about-text">
+        <p class="about-text">
+              &#127881; [Summer 2025] I'm going to be in California this summer! I'll be interning with the ML team at <a targer="blank" href="https://www.numenta.com/">Numenta</a> to work on some amazing tech and research!
+              Cannot wait to roam around the beached in the bay area :)
+          
+        </p>
+<!--          <p class="about-text">
                   I'm finally settling in New York! Starting my Masters of Science program at Columbia Engineering this September.
                   Manhattan has been lovely so far, so much to explore and so much to do! PS. Jesus Christ, its cold. I feel like I'm being permanently pasteurized.
-         </p>
+         </p> -->
 
         <p class="about-text">
-                  &#127881; I won the best poster award at the <a targer="blank" href="https://events.nyas.org/event/23384180-ad97-4cad-baee-adae8e260c89/summary"> 15<SUP>th</SUP> Annual Machine Learning Symposium </a> conducted by the <a targer="blank" href="https://www.nyas.org/">New York Academy of Sciences</a> for my work on <a targer="blank" href="https://arxiv.org/abs/2402.09769"> learning without backpropagation</a>!
+                  &#127881; [Fall 2024] I won the best poster award at the <a targer="blank" href="https://events.nyas.org/event/23384180-ad97-4cad-baee-adae8e260c89/summary"> 15<SUP>th</SUP> Annual Machine Learning Symposium </a> conducted by the <a targer="blank" href="https://www.nyas.org/">New York Academy of Sciences</a> for my work on <a targer="blank" href="https://arxiv.org/abs/2402.09769"> learning without backpropagation</a>!
                   Do check out my <a targer="blank" href="https://drive.google.com/file/d/1MGvw7TpTwyrQAKBt2wryS2ekToxdcQx5/view?usp=sharing"> poster </a> and let me know what you think about my work!
         </p>
 
         <p class="about-text">
                   &#127881; I am researching LLM optimization with <a targer="blank" href="https://goldblum.github.io/">Prof. Micah Goldblum</a> and the <a targer="blank" href="https://cims.nyu.edu/~andrewgw/">Wilson Lab at NYU Courant</a>!
         </p>
-
-         <p class="about-text">
-                  I'm actively searching for ML research internships at labs and the industry for the summer of '25!
-                  Feel free to reach out to me at aditsom7[at]gmail[dot]com or use the social media links below!
-         </p>
 
   
 
