--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ css: /assets/css/demo.css
 
 <div id="aboutme-section">
         <p class="about-text">
-              &#127881; [Summer 2025] I'm going to be in California this summer! I'll be interning with the ML team at <a targer="blank" href="https://www.numenta.com/">Numenta</a> to work on some amazing tech and research!
-              Cannot wait to roam around the beached in the bay area :)
+              &#127881; 
+              I'm going to be in California this summer! I'll be interning with the ML team at <a targer="blank" href="https://www.numenta.com/">Numenta</a> to work on some amazing tech and research!
+              Cannot wait to roam around the beaches in the bay :) [Summer 2025]
           
         </p>
 <!--          <p class="about-text">
@@ -29,8 +30,9 @@ css: /assets/css/demo.css
          </p> -->
 
         <p class="about-text">
-                  &#127881; [Fall 2024] I won the best poster award at the <a targer="blank" href="https://events.nyas.org/event/23384180-ad97-4cad-baee-adae8e260c89/summary"> 15<SUP>th</SUP> Annual Machine Learning Symposium </a> conducted by the <a targer="blank" href="https://www.nyas.org/">New York Academy of Sciences</a> for my work on <a targer="blank" href="https://arxiv.org/abs/2402.09769"> learning without backpropagation</a>!
-                  Do check out my <a targer="blank" href="https://drive.google.com/file/d/1MGvw7TpTwyrQAKBt2wryS2ekToxdcQx5/view?usp=sharing"> poster </a> and let me know what you think about my work!
+                  &#127881;
+                  I won the best poster award at the <a targer="blank" href="https://events.nyas.org/event/23384180-ad97-4cad-baee-adae8e260c89/summary"> 15<SUP>th</SUP> Annual Machine Learning Symposium </a> conducted by the <a targer="blank" href="https://www.nyas.org/">New York Academy of Sciences</a> for my work on <a targer="blank" href="https://arxiv.org/abs/2402.09769"> learning without backpropagation</a>!
+                  Do check out my <a targer="blank" href="https://drive.google.com/file/d/1MGvw7TpTwyrQAKBt2wryS2ekToxdcQx5/view?usp=sharing"> poster </a> and let me know what you think about my work! [Fall 2024]
         </p>
 
         <p class="about-text">
