--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ css: /assets/css/demo.css
 
 <div id="aboutme-section">
         <p class="about-text">
+                  &#127881; My research showing how to pretrain Large Language Models (LLMs) with small batch sizes and simple SGD (without momentum) is out on <a targer="blank" href="https://arxiv.org/abs/2507.07101">arXiv!</a> Huge shout out to my mentor <a targer="blank" href="https://goldblum.github.io/">Prof. Micah Goldblum</a> and my amazing collaborators at the <a targer="blank" href="https://cims.nyu.edu/~andrewgw/">Wilson Lab at NYU Courant</a>.
+                  Here we provide beautiful recommendations for slightly broke practitioners to train language models AND compete with the giants and their inordinate compute! Do reach out if you're interested in talking about training large language models, optimizers, and have general distaste for gradient accumulation [Summer 2025]
+        </p>
+  
+        <p class="about-text">
               &#127881; 
               I'm going to be in California this summer! I'll be interning with the ML team at <a targer="blank" href="https://www.numenta.com/">Numenta</a> to work on some amazing tech and research!
               Cannot wait to roam around the beaches in the bay :) [Summer 2025]
@@ -35,9 +40,7 @@ css: /assets/css/demo.css
                   Do check out my <a targer="blank" href="https://drive.google.com/file/d/1MGvw7TpTwyrQAKBt2wryS2ekToxdcQx5/view?usp=sharing"> poster </a> and let me know what you think about my work! [Fall 2024]
         </p>
 
-        <p class="about-text">
-                  &#127881; I am researching LLM optimization with <a targer="blank" href="https://goldblum.github.io/">Prof. Micah Goldblum</a> and the <a targer="blank" href="https://cims.nyu.edu/~andrewgw/">Wilson Lab at NYU Courant</a>!
-        </p>
+        
 
   
 
