--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ css: /assets/css/demo.css
 <div id="aboutme-section">
         <p class="about-text">
                   &#127881; My research showing how to pretrain Large Language Models (LLMs) with small batch sizes and simple SGD (without momentum) is out on <a targer="blank" href="https://arxiv.org/abs/2507.07101">arXiv!</a> Huge shout out to my mentor <a targer="blank" href="https://goldblum.github.io/">Prof. Micah Goldblum</a> and my amazing collaborators at the <a targer="blank" href="https://cims.nyu.edu/~andrewgw/">Wilson Lab at NYU Courant</a>.
-                  Here we provide beautiful recommendations for slightly broke practitioners to train language models AND compete with the giants and their inordinate compute! Do reach out if you're interested in talking about training large language models, optimizers, and have general distaste for gradient accumulation [Summer 2025]
+                  Here, we provide beautiful recommendations for slightly broke practitioners to train language models AND compete with the giants and their inordinate compute! Do reach out if you're interested in talking about training large language models, optimizers, and have general distaste for gradient accumulation [Summer 2025]
         </p>
   
         <p class="about-text">
